staging/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: staging
  labels:
    environment: staging
